--- a/imx-iotcore/driver/usb/imxUcmTcpciCxClient/imxUcmTcpciCxClient.vcxproj.Filters
+++ b/imx-iotcore/driver/usb/imxUcmTcpciCxClient/imxUcmTcpciCxClient.vcxproj.Filters
@@ -24,45 +24,27 @@
     </Inf>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="imx_tcpci_ioctl.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="imx_tcpci_dbg.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="imx_tcpci_i2c.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="imx_tcpci_driver.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="imx_tcpci_device.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="imx_tcpci_phy_io_map.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="imx_tcpci_alert.h">
+    <ClInclude Include="imx_tcpci_trace.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="imx_tcpci.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="imx_tcpci_Ioctl.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="imx_tcpci_dbg.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="imx_tcpci_i2c.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="imx_tcpci_alert.cpp">
+    <ClCompile Include="imx_tcpci_trace.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="imx_tcpci_device.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="imx_tcpci_driver.cpp">
+    <ClCompile Include="imx_tcpci.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -70,8 +52,5 @@
     <ResourceCompile Include="resource.rc">
       <Filter>Resource Files</Filter>
     </ResourceCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <PkgGen Include="imxUcmTcpciCxClient.wm.xml" />
   </ItemGroup>
 </Project>
